[gd_scene load_steps=2 format=3 uid="uid://sodse20spqxy"]

[ext_resource type="Script" path="res://scripts/folder_fail.gd" id="1_xmy1j"]

[node name="Folderfail" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xmy1j")

[node name="RedBackdrop" type="ColorRect" parent="."]
layout_mode = 0
color = Color(0.95, 0, 0, 1)

[node name="Audio" type="Node" parent="."]

[node name="BossFootstepsIn" type="AudioStreamPlayer" parent="Audio"]
volume_db = -3.0

[node name="BossScold" type="AudioStreamPlayer" parent="Audio"]
volume_db = -3.0

[node name="BossFootstepsOut" type="AudioStreamPlayer" parent="Audio"]
volume_db = -3.0
